[package]
name = "lib-kmeans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
rand="0.8.4"
rand_distr = "0.4.3"
# ndarray-linalg = { version = "0.14.1", features = ["intel-mkl"] }
log = "0.4.17"
simple_logger = "2.1.0"
env_logger = "0.9.0"
statrs = "0.15.0"
csv = "1.1.6"
rayon = "1.5.3"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
itertools = "0.10.3"